@startuml
'https://plantuml.com/class-diagram
abstract class  Game{

}

abstract PropsFactory{
    + game:Game
    + PropsFactory(Game game)
    + callProps(String type, int x, int y):AbstractProps
    - {abstract} createProps(String type, int x, int y):AbstractProps

}

class EasyProFactory{
+ game:Game
    + EasyProFactory(Game game)
    - createProps(String type, int x, int y):AbstractProps
}
class NormalProFactory {
+ game:Game
    + NormalProFactory(Game game)
    - createProps(String type, int x, int y):AbstractProps
}
class HardProFactory {
+ game:Game
    + HardProFactory(Game game)
    - createProps(String type, int x, int y):AbstractProps
}

PropsFactory <|-- EasyProFactory
PropsFactory <|-- NormalProFactory
PropsFactory <|-- HardProFactory

Game -> PropsFactory 

AbstractProps <|-- BloodProps
AbstractProps <|-- BulletProps
AbstractProps <|-- BombProps

EasyProFactory..>BloodProps
EasyProFactory..>BulletProps
EasyProFactory..>BombProps

NormalProFactory..>BloodProps
NormalProFactory..>BulletProps
NormalProFactory..>BombProps

HardProFactory..>BloodProps
HardProFactory..>BulletProps
HardProFactory..>BombProps



abstract class AbstractProps{
    # hp:int
    + AbstractProps(int locationX, int locationY, int speedX, int speedY):void
    + getHp():int
    + setHp():void
    + forward():void
    +{abstract}effectCrash():void
}

class BloodProps
{
+ BloodProps(int locationX, int locationY, int speedX, int speedY)
+ effectCrash():void
}

class BulletProps
{
- mg:Game
+ BulletProps(int locationX, int locationY, int speedX, int speedY,Game game)
+ effectCrash():void
}

class BombProps
{
- mg:Game
- subList:List<AbstractFlyingObject>
+ BombProps(int locationX, int locationY, int speedX, int speedY,Game game)
+ effectCrash():void
+ addList():void
+ notifyList():void
}





@enduml